--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
-    "start": "node ./server/app",
+    "start": "npm un build && node ./server/app",
     "build": "react-scripts build"
   }
 }
